--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "biosphere-watch",
   "version": "0.1.0",
-  "homepage": "https://whoismakena.github.io/ReactJS/Biosphere-Watch",
+  "homepage": "https://whoismakena.github.io/ReactJS",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
